<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    tools:context="com.example.omri.placesretrofit20.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="@+id/relative_layout_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>



    <CheckBox
        android:id="@+id/around_my_btn"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:text="@string/around_my_location"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="@id/relative_layout_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="@id/relative_layout_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <android.support.design.widget.TabLayout
        android:id="@+id/main_screen_tablayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/md_blue_50"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout_main"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/black">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_100"
            android:elevation="10dp"
            android:text="@string/Around_Me_Tab" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_100"
            android:elevation="10dp"
            android:text="@string/History_Tab"
            android:theme="@android:style/Widget.Material.Tab" />
    </android.support.design.widget.TabLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_screen_tablayout">

        <android.support.v4.view.ViewPager
            android:id="@+id/main_screen_view_pager"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="248dp" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relative_layout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_screen_tablayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <SearchView
            android:id="@+id/main_screen_searchView"
            style="@style/MaterialSearchViewStyle"
            android:layout_width="316dp"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="124dp"
            android:background="@android:color/background_light"
            android:divider="@color/colorPrimaryLight"
            android:elevation="2dp"
            android:fadingEdge="horizontal"
            android:foregroundGravity="top"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint_around_me"
            android:searchIcon="@drawable/magnifier1"
            app:layout_constraintBottom_toBottomOf="@+id/main_screen_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415" />


        <ImageView
            android:id="@+id/main_screen_photo"
            android:layout_width="414dp"
            android:layout_height="265dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="168dp"
            android:layout_height="82dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/main_screen_searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_screen_photo"
            app:layout_constraintVertical_bias="0.343"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="169dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/main_screen_searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="@+id/main_screen_photo"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.333"
            app:srcCompat="@drawable/logotext" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
