<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_grey_50">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/place_recycler"
            style="@style/Base.CardView"
            android:layout_width="332dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:divider="@color/colorPrimaryDark"
            android:dividerHeight="10dp"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="116dp"
        android:layout_height="179dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="right"
            android:text="TextView"
            android:textColor="@color/md_black_1000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phon_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:textColor="@color/md_black_1000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/open_now_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/md_black_1000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/open_now_text"
                android:background="@color/md_grey_600"
                android:drawSelectorOnTop="true"
                android:elevation="1dp"
                android:popupElevation="1dp"
                android:text="@string/opening_hours"
                android:textColor="@color/light_gray"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>


        <ImageView
            android:id="@+id/add_to_fav"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:cropToPadding="false"
            app:srcCompat="@drawable/addtofavorite" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/call_btn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_grey_600"
            android:elevation="1dp"
            android:text="@string/call_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linear_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/sym_action_call" />

        <Button
            android:id="@+id/waze_btn"
            style="@android:style/Widget.Button"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/md_grey_600"
            android:elevation="1dp"
            android:gravity="center"
            android:text="@string/waze_btn"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_btn"
            app:layout_constraintVertical_bias="0.011" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/md_grey_600"
        android:elevation="3dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/light_gray"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearImage"
        android:layout_width="222dp"
        android:layout_height="176dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/place_map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_dialog_map" />


</android.support.constraint.ConstraintLayout>